crates/interpreter/src/snapshots/interpreter__test__test-11.snap
---
source: crates/interpreter/src/test.rs
expression: "e(indoc! {\n            r#\"\n        foo bar baz bil is\n            barbaz is bar + baz.\n            barbaz + bil.\n        \n        foo 3 5 \"a\"\n    \"#\n        })"
---
"8a" 0..74

