crates/interpreter/src/snapshots/interpreter__test__test-16.snap
---
source: crates/interpreter/src/test.rs
expression: "e(r#\"\"this is a test of our regularly scheduled broadcast\" * (0-1)\"#)"
---
"tsacdaorb deludehcs ylraluger ruo fo tset a si siht" 0..60

