crates/interpreter/src/snapshots/interpreter__test__test-18.snap
---
source: crates/interpreter/src/test.rs
expression: "e(r#\"(1 / 10) + (2 / 10)\"#)"
---
0.3 0..18

