crates/interpreter/src/snapshots/interpreter__test__test-23.snap
---
source: crates/interpreter/src/test.rs
expression: "e(r#\"for 1..=10 as idx do idx * 2\"#)"
---
List 0..28
  2 0..28
  4 0..28
  6 0..28
  8 0..28
  10 0..28
  12 0..28
  14 0..28
  16 0..28
  18 0..28
  20 0..28

