crates/interpreter/src/snapshots/interpreter__test__test-24.snap
---
source: crates/interpreter/src/test.rs
expression: "e(r#\"for 1..=3 as x do for 1..=3 as y do [x, y]\"#)"
---
List 0..42
  List 18..42
    List 36..42
      1 0..8
      1 0..26
    List 36..42
      1 0..8
      2 0..26
    List 36..42
      1 0..8
      3 0..26
  List 18..42
    List 36..42
      2 0..8
      1 0..26
    List 36..42
      2 0..8
      2 0..26
    List 36..42
      2 0..8
      3 0..26
  List 18..42
    List 36..42
      3 0..8
      1 0..26
    List 36..42
      3 0..8
      2 0..26
    List 36..42
      3 0..8
      3 0..26

