crates/interpreter/src/snapshots/interpreter__test__test-3.snap
---
source: crates/interpreter/src/test.rs
expression: "e(r#\"\"hi there\"\"#)"
---
"hi there" 0..10

